Travis-CI integration
Add tox.ini
Add .travis.yml
Fix pep8
Fix unittests
Add badges into README.md
Add PyPi deployment

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -135,7 +135,8 @@ incloud_live_migration = nova
 # Uses low-level DB requests if set to True, may be incompatible with more
 # recent versions of Keystone. Tested on grizzly, icehouse and juno. True by
 # default
-optimize_user_role_fetch = [True|False]
+# optimize_user_role_fetch = [True|False]
+optimize_user_role_fetch = True
 
 # Number of times CloudFerry will attempt to connect when connecting to a new
 # server via SSH.
