Add distributions for travis deployment

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 2.7
 skipsdist = True
-envlist = pep8,pylint,py27,py36
+envlist = pep8,pylint,py27
 
 [testenv]
 whitelist_externals = find
@@ -11,21 +11,15 @@ deps =
 usedevelop = True
 commands =
     find . -type f -name "*.pyc" -delete
-    py.test --html=.tests_result/pytest_results.html --durations=10 "tests" {posargs}
+    py.test --html=.tests_result/pytest_results.html --durations=10 --cov=cloudferry --cov-report=html "tests" {posargs}
 distribute = false
 basepython = python2.7
-
-[testenv:py36]
-basepython = python3.6
 
 [testenv:pep8]
 deps =
     flake8
 commands = flake8
 distribute = false
-
-[testenv:cover]
-commands = py.test --cov=cloudferry tests --cov-report=html
 
 [flake8]
 show-source = true
