Change home page of the project

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author-email = workloadmobility@mirantis.com
 summary = Openstack cloud workload migration tool
 description-file =
     README.md
-home-page = https://github.com/MirantisWorkloadMobility/CloudFerry
+home-page = https://github.com/Mirantis/CloudFerry
 license = Apache-2
 classifier =
     Development Status :: 4 - Beta
